# vitruvyan-core

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AUTOCOMPLETE_OUT_OF_THE_BOX_TESTING.md  BOOT_TEST_STATUS.md  CHANGELOG_PHASE6.md  CHECKPOINT_PHASE1.md  CHECKPOINT_PHASE1D.md  COO_PHASE3_APPROVAL_REPORT_V2.md  COPILOT_RESUME_PROMPT.md  CREWAI_DEPRECATION_NOTICE.md  DEBUG_LANGGRAPH.md  GRAFANA_ORTHODOXY_FIX_REPORT.md  GROK_CLEANUP_PHASE2_PROMPT.md  GROK_PHASE3_VEE_ABSTRACTION_PROMPT.md  Jenkinsfile  LANGGRAPH_REFACTORING_PROMPT.md  MCP_SERVER_CONSTITUTIONAL_REFACTORING_PLAN.md  MCP_SERVER_REFACTORING_AUDIT.md  MERCATOR_ALGORITHM_MIGRATION_PROMPT.md  Makefile  NEURAL_ENGINE_ARCHITECTURAL_ANALYSIS.md  NEURAL_ENGINE_CONTRACTS.md  NEURAL_ENGINE_REFACTORING_ANALYSIS.md  PHASE1D_BOOT_TEST_FINAL_REPORT.md  PHASE1E_NEURAL_ENGINE_REPORT.md  PHASE3D_COMPLETION_REPORT.md  README.md  REFACTORING_SACRED_ORDERS_VISION.md  RESUME_DEBUG_SESSION.md  SACRED_ORDERS_NODES_REWRITE_PLAN.md  SACRED_ORDERS_REFACTORING_PLAN.md  SLOT_FILLING_ARCHITECTURE_ALIGNMENT.md  SYNAPTIC_BUS_AUDIT_FINAL.md  SYNAPTIC_BUS_AUDIT_REPORT.md  SYNAPTIC_CONCLAVE_VERIFICATION_REPORT.md  TODO_ORTHODOXY_WARDENS_COMPLETION.md  VITRUVYAN_CORE_STATUS_ANALYSIS.md  VIT_CLI_QUICKSTART.md  (+16 more)
.github/: APPENDICES_AUDIT_FEB11_2026.md  COO_APPROVAL_EXECUTIVE_SUMMARY.md  COO_APPROVAL_SEMANTIC_CONVERSATIONAL_REPORT.md  LANGGRAPH_ORCHESTRATION_CONTRACT_v1.md  MCP_SACRED_ORDERS_INTEGRATION.md  VSGS_EXECUTIVE_SUMMARY.md  Vitruvyan_Appendix_A_Neural_engine.md  Vitruvyan_Appendix_B_Proprietary_Algorithms.md  Vitruvyan_Appendix_C_Epistemic_Roadmap_2026.md  Vitruvyan_Appendix_Codex_Hunters.md  Vitruvyan_Appendix_D_Truth_and_Integrity_Layer.md  Vitruvyan_Appendix_E_RAG_System.md  Vitruvyan_Appendix_F_Conversational_Layer.md  Vitruvyan_Appendix_G_ Conversational_Architecture_V1.md  Vitruvyan_Appendix_H_Blockchain_Ledger.md  Vitruvyan_Appendix_I_Pattern_Weavers.md  Vitruvyan_Appendix_J_LangGraph_Executive_Summary.md  Vitruvyan_Appendix_K_Babel_Gardens.md  Vitruvyan_Appendix_K_MCP_Integration.md  Vitruvyan_Appendix_L_Synaptic_Conclave.md  Vitruvyan_Appendix_L_UI_Architecture.md  Vitruvyan_Appendix_M_Shadow_Trading.md  Vitruvyan_Appendix_N_Portfolio_Architects.md  Vitruvyan_Appendix_O_Orthodoxy_Wardens.md  copilot-instructions.md  copilot-instructions.md.backup_dec23  pre-commit  vitruvyan_agents_and_tests.md
.vmw/: ALWAYS_AVAILABLE_CONTEXT.md  config.yaml
config/: README_CONFIG.md  api_config.py
docs/: ARCHITECTURAL_REFACTORING_FEB6_2026.md  ARCHITECTURE_AUDIT_FEB12_2026.md  BOOT_TEST_PLAN.md  BOOT_TEST_STATUS.md  CHECKPOINT_PHASE1.md  CHECKPOINT_PHASE1D.md  COO_PHASE3_APPROVAL_REPORT.md  COO_PHASE3_APPROVAL_REPORT_V2.md  CREWAI_DEPRECATION_PLAN.md  DOCS_VERIFICATION_REPORT_FEB14_2026.md  DOMAIN_AGNOSTIC_E2E_TEST_REPORT.md  index.md  (+29 more)
(+2106 files in other folders)
